--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,22 @@
   height: 150px;
   padding: 20px;
   color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  
+}
+.quote-container{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.quote {
+  margin: 10px 40px 20px 40px;
+  font-family: Helvetica;
+  font-size: 20px;
 }
 
 .App-title {
@@ -24,26 +40,55 @@
 
 .to-do-item {
   border: 4px solid #556674;
-  width: 500px;
+  width: 450px;
   height: 50px;
   margin-bottom: 15px;
-  border-radius: 15px;
+  border-radius: 9px;
   display: flex;
-  padding: 5px;
+  padding: 5px 5px 5px 25px;
   align-items: center;
 }
 .to-do-item div{
   color: #20282e;
   font-family: sans-serif;
-  margin: 10px;
+  margin-left: 20px;
+  font-size: 25px;
 
 }
+.checkbox {
+  width: 30px;
+  height: 30px;
+  border-radius: 3px;
+}
+
+
 .list-container {
   display: flex;
   flex-direction: column;
   padding: 15px;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
+  border: 4px solid black;
+  height: 450px;
+  width: 500px;
+  border-radius: 9px;
+  margin-top: 25px;
+}
+.content{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+}
+.new-task-container{
+  padding: 10px;
+  display:flex;
+}
+.new-task-container input {
+  width: 300px;
+  height: 30px;
+  margin-right: 20px;
+  border-radius: 3px;
 }
 
 
